--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Schoogle Map">
+  <meta name="apple-mobile-web-app-title" content="Schoogle Mapo">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="icon" href="favicon.ico" type="image/x-icon">
 
-  <title>Schoogle Map</title>
+  <title>Schoogle Mapo</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
